# repo-rescue-mcp

./: .env.example  .gitignore  Dockerfile  OPENCLAW.md  README.md  package-lock.json  package.json  pyproject.toml  stdio-server.mjs
archive/: README.md  SHA256SUMS.txt
archive/product/: positioning.md  requirements.md  strategy-comparison.md
archive/xfyun/: platform-config.md  prompts.md  restore.md  test-evidence.md  workflow-648761.yml
sandbox/: Dockerfile.python311
scripts/: smoke_mcp.py  smoke_stdio.py
skills/verified-code-rescue/: SKILL.md
skills/verified-code-rescue/agents/: openai.yaml
skills/verified-code-rescue/references/: evidence-levels.md  response-contract.md
src/repo_rescue/: __init__.py  analysis.py  repository.py  runner.py  security.py  server.py
tests/: stdio-snippet.test.mjs  test_analysis.py  test_runner.py  test_security.py
